# markinp

./: .gitignore  .pre-commit-hooks.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  index.html  markinp-0.3.0-py3-none-any.whl  mkdocs.yml  plan.md  pyproject.toml  sitemap.xml  validator.html
.github/workflows/: ci.yml  docs.yml  draft-pdf.yml  release.yml
cli/: index.html
conda-recipe/: meta.yaml
docs/: cli.md  error-codes.md  format.md  index.md  markinp-0.2.0-py3-none-any.whl  validator.html
docs/announcements/: conference-abstract.md  instructor-outreach.md  marketing-plan.md  phidot.md  r-sig-ecology.md
error-codes/: index.html
format/: index.html
markinp/: __init__.py  build.py  cli.py  diagnostics.py  model.py  parse.py  report.py  tokens.py  validate.py  write.py
paper/: paper.bib  paper.md
search/: search_index.json
tests/: conftest.py  test_build.py  test_cli.py  test_parse.py  test_report.py  test_validate.py  test_write.py
tests/fixtures/: all_zero_history.inp  bom.inp  captures_long.csv  captures_wide.csv  content_after_semicolon.inp  covariate_count.inp  duplicates.inp  empty_file.inp  empty_group.inp  frequency_count.inp  illegal_history_char.inp  illegal_stratum.inp  missing_covariate.inp  missing_semicolon.inp  mixed_whitespace.inp  multistrata.inp  negative_frequency.inp  noninteger_frequency.inp  nonnumeric_frequency.inp  nonstandard_alphabet.inp  occupancy.inp  occupancy_all_missing.inp  occupancy_sites.csv  ragged_history.inp  unterminated_comment.inp  valid_comments.inp  valid_covariates.inp  valid_multi_group.inp  valid_single_group.inp
